--- a/README
+++ b/README
@@ -1,3 +1,4 @@
-JIRA Git Plugin
+JIRA 4.x Git Plugin
+===================
 
-Forked from https://studio.plugins.atlassian.com/wiki/display/JGIT/JIRA+Git+Plugin
+Forked JIRA Git Plugin 0.5.2-SNAPSHOT from https://studio.plugins.atlassian.com/wiki/display/JGIT/JIRA+Git+Plugin
